<resources>
    <!--APP Name-->
    <string name="app_name">Fiesta Finder</string>
    <!--Login Screen -->
    <string name="password">Password</string>
    <string name="username_hint">Username</string>
    <string name="login">Login</string>
    <string name="register_button">CREATE NEW FIESTA FINDER ACCOUNT</string>
    <!--Activity Titles-->
    <string name="title_activity_register">Create Account</string>
    <string name="title_activity_post_list">Fiesta Posts</string>
    <string name="title_activity_post_details">Details</string>
    <string name="title_activity_location_list">Fiestas!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_post_create">Make a Fiesta Post</string>
    <!--Buttons & Hints-->
    <string name="post_button">Post</string>
    <string name="post_title_hint">Post Title</string>
    <string name="post_text_hint">Post Text Maximum of 90 Characters</string>
    <string name="cancel_button">Cancel</string>
    <!--API KEYS-->
    <string name="google_app_id">AIzaSyCIMk7jgKQPJKbm0kgVgJ4d7ajdrmdzD6w</string>
    <string name="google_api_key">AIzaSyA1kPDB0SxVCEXjT1Bv2AE0O69IBGfLRPI</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username:</string>
    <string name="location_title">Location Title</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_location_list1">LocationList1</string>
    <string name="logout_settings">Log Out</string>

</resources>
