<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/registerBackground"
    tools:context=".LoginScreen"
    android:textAlignment="center"
    android:padding="5dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernamereg_input"
            android:hint="@string/username_hint"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordreg_input"
            android:hint="@string/password"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordreg_reInput"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:hint="Re-Enter Password"
            android:textAlignment="center"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:layout_gravity="center_horizontal"
            android:id="@+id/registernow_button"
            android:background="@color/buttonColor"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>
